# Said

./: .gitignore  ANKI_AGPL_LICENSE  LICENSE  README.md  project.yml
.github/workflows/: ios-build.yml
AnkiBackend/: Package.swift
AnkiBackend/AnkiRust.xcframework/: Info.plist
AnkiBackend/anki-bridge-rs/: Cargo.toml
AnkiBackend/anki-bridge-rs/src/: lib.rs
AnkiBackend/anki-bridge-rs/tests/: deck_management.rs  target_packages.rs
AnkiBackend/scripts/: build-xcframework.sh  generate-protos.sh
Said.xcodeproj/: project.pbxproj
Said/Anki/: AnkiBackend.swift  AnkiStore.swift  CardModels.swift  NoteFieldMapper.swift  OfficialAnkiCollection.swift  SaidApkgMigration.swift  SimpleZip.swift
Said/Components/: DSComponents.swift
Said/Controllers/: AddSpeakingCardViewController.swift  AnkiManagementModels.swift  DataMaintenanceViewController.swift  DeckCustomStudyViewController.swift  DeckListViewController.swift  DeckOptionsViewController.swift  DeckPracticePreferencesViewController.swift  EdgeTTSBatchViewController.swift  NoteEditorViewController.swift  ReviewViewController.swift  RootSplitViewController.swift  SettingsViewController.swift  SidebarViewController.swift  StatisticsViewController.swift  SyncViewController.swift  TranslationBatchViewController.swift
Said/Services/: BackupBundleHelper.swift  DeckListCollapseStore.swift  (+8 more)
SaidTests/: DeckListCollapseStoreTests.swift  MigrationNoteSanitizerTests.swift
SpeakingAnki.xcodeproj/: project.pbxproj
docs/: RSLIB.md  USAGE.md
scripts/: build-device.sh  make_minimal_apkg.py  verify_scheduler_export.py
(+82 files in other folders)
